# obs-mac-virtualcam

./: .gitignore  Brewfile  CMakeLists.txt  COMPATIBILITY.md  CONTRIBUTING.md  DEVELOPING.md  LICENSE  README.md  plugin-main.c
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support-request.md
.github/workflows/: build.yml  release.yml
CMIOMinimalSample/: Device.h  Device.mm  Info.plist  ObjectStore.h  ObjectStore.mm  PlugIn.h  PlugIn.mm  PlugInInterface.mm  PlugInMain.mm  Stream.h  Stream.mm
CMIOMinimalSample.xcodeproj/: project.pbxproj
CMIOMinimalSample.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CMIOMinimalSample.xcodeproj/xcuserdata/jboiles.xcuserdatad/xcschemes/: xcschememanagement.plist
assets/: test-card.pcvd
ci/: ci_includes.cmd.in  ci_includes.sh.in
ci/macos/: certs.p12  package-macos.sh
installer/: installer-macOS.pkgproj.in
src/: obs-plugin
src/common/: MachProtocol.h
src/common/CoreMediaIO/DeviceAbstractionLayer/Devices/: GenerateMIGOutput.pl
src/common/CoreMediaIO/DeviceAbstractionLayer/Devices/DP/Base/: CMIO_DP_Command.cpp  CMIO_DP_Command.h  CMIO_DP_Control.cpp  CMIO_DP_Control.h  CMIO_DP_ControlDictionary.cpp  CMIO_DP_ControlDictionary.h  CMIO_DP_Device.cpp  CMIO_DP_Device.h  CMIO_DP_DeviceCommands.cpp  CMIO_DP_DeviceCommands.h  CMIO_DP_DeviceSettings.cpp  CMIO_DP_DeviceSettings.h  CMIO_DP_HardwarePlugInInterface.cpp  CMIO_DP_Object.cpp  CMIO_DP_Object.h  CMIO_DP_PlugIn.cpp  CMIO_DP_PlugIn.h  CMIO_DP_Stream.cpp  CMIO_DP_Stream.h  CMIO_DP_UserInfo.cpp  CMIO_DP_UserInfo.h
src/common/CoreMediaIO/DeviceAbstractionLayer/Devices/DP/Properties/: CMIO_DP_Property_Base.cpp  CMIO_DP_Property_Base.h  CMIO_DP_Property_ClientSyncDiscontinuity.cpp  CMIO_DP_Property_ClientSyncDiscontinuity.h  CMIO_DP_Property_Clock.cpp  CMIO_DP_Property_Clock.h  CMIO_DP_Property_Deck.cpp  CMIO_DP_Property_Deck.h  CMIO_DP_Property_DeviceMaster.cpp  CMIO_DP_Property_DeviceMaster.h  CMIO_DP_Property_EndOfData.cpp  CMIO_DP_Property_EndOfData.h  CMIO_DP_Property_FirstOutputPresentationTimeStamp.cpp  CMIO_DP_Property_FirstOutputPresentationTimeStamp.h  CMIO_DP_Property_FormatList.cpp  CMIO_DP_Property_FormatList.h  CMIO_DP_Property_HogMode.cpp  CMIO_DP_Property_HogMode.h  CMIO_DP_Property_NoData.cpp  CMIO_DP_Property_NoData.h  CMIO_DP_Property_OutputBuffers.cpp  CMIO_DP_Property_OutputBuffers.h  CMIO_DP_Property_SMPTETimeCallback.cpp  CMIO_DP_Property_SMPTETimeCallback.h  CMIO_DP_Property_ScheduledOutputNotificationProc.cpp  CMIO_DP_Property_ScheduledOutputNotificationProc.h  CMIO_DP_Property_SuspendedByUser.cpp  CMIO_DP_Property_SuspendedByUser.h
src/common/CoreMediaIO/DeviceAbstractionLayer/Devices/IOV/PlugIn/: CMIO_DP_IOV_Control.cpp  CMIO_DP_IOV_Control.h  CMIO_DP_IOV_ControlDictionary.cpp  CMIO_DP_IOV_ControlDictionary.h
src/common/CoreMediaIO/DeviceAbstractionLayer/Devices/Sample/: SamplePrefix.h
src/common/CoreMediaIO/DeviceAbstractionLayer/Devices/Sample/Assistant/: CMIO_DPA_Sample_Shared.h
src/common/CoreMediaIO/DeviceAbstractionLayer/Devices/Sample/Assistant/Client/: CMIO_DPA_Sample_ClientExtras.cpp  CMIO_DPA_Sample_ClientExtras.h
src/common/CoreMediaIO/DeviceAbstractionLayer/Devices/Sample/Assistant/MIG/: CMIODPASample.defs
src/common/CoreMediaIO/DeviceAbstractionLayer/Devices/Sample/Assistant/Server/: CMIO_DPA_Sample_Server_Assistant.cpp  CMIO_DPA_Sample_Server_Assistant.h  CMIO_DPA_Sample_Server_Common.h  (+5 more)
src/common/CoreMediaIO/DeviceAbstractionLayer/Devices/Sample/PlugIn/: CMIO_DP_SampleVCam_PlugInInterface.cpp  CMIO_DP_Sample_ControlIDs.h  CMIO_DP_Sample_Device.cpp  CMIO_DP_Sample_Device.h  CMIO_DP_Sample_IOBackedDevice.cpp  CMIO_DP_Sample_IOBackedDevice.h  CMIO_DP_Sample_PlugIn.cpp  CMIO_DP_Sample_PlugIn.h  CMIO_DP_Sample_Stream.cpp  CMIO_DP_Sample_Stream.h  CMIO_DP_Sample_VirtualDevice.cpp  CMIO_DP_Sample_VirtualDevice.h  SampleVCam-Info.plist  SampleVCam.exp
src/common/CoreMediaIO/PublicUtility/: CMIODebugMacros.cpp  CMIODebugMacros.h  CMIODebugPrintf.cpp  CMIODebugPrintf.h  CMIO_Buffer.h  CMIO_PropertyAddress.h  CMIO_SMPTETimeBase.cpp  CMIO_SMPTETimeBase.h
src/common/CoreMediaIO/PublicUtility/CoreMediaAssistant/: CMIO_CMA_BlockBuffer.h  CMIO_CMA_FormatDescription.h  CMIO_CMA_SampleBuffer.h  CMIO_CMA_SimpleQueue.h  CMIO_CMA_Time.h
src/common/CoreMediaIO/PublicUtility/CoreVideoAssistant/: CMIO_CVA_Buffer.h  CMIO_CVA_Image_Buffer.h  CMIO_CVA_Pixel_Buffer.h
src/common/CoreMediaIO/PublicUtility/DALAssistant/: CMIO_DALA_Object.cpp  CMIO_DALA_Object.h  CMIO_DALA_System.cpp  CMIO_DALA_System.h
src/common/CoreMediaIO/PublicUtility/IOKitAssistant/: CMIO_IOKA_NotificationPort.cpp  CMIO_IOKA_NotificationPort.h  CMIO_IOKA_Object.h
src/common/CoreMediaIO/PublicUtility/IOStreamAssistant/: CMIO_IOSA_Assistance.cpp  CMIO_IOSA_Assistance.h
src/common/CoreMediaIO/PublicUtility/IOSurfaceAssistant/: CMIO_SA_Assistance.cpp  CMIO_SA_Assistance.h
src/common/CoreMediaIO/PublicUtility/IOVideoAssistant/: CMIO_IOVA_Assistance.cpp  CMIO_IOVA_Assistance.h
src/common/CoreMediaIO/PublicUtility/POSIXThreadAssistant/: CMIO_PTA_Assistance.h  CMIO_PTA_CFMachPortThread.cpp  CMIO_PTA_CFMachPortThread.h  CMIO_PTA_NotificationPortThread.cpp  CMIO_PTA_NotificationPortThread.h
src/common/IOVideo/: IOVideoDebugMacros.h
src/dal-plugin/: CMIODPASampleClient.cpp  CMIODPASampleClient.h  CMSampleBufferUtils.h  CMSampleBufferUtils.mm  CMakeLists.txt  Defines.h.in  Device.h  Device.mm  Info.plist  Logging.h  MachClient.h  MachClient.mm  OBSDALCMSampleBufferUtils.h  OBSDALCMSampleBufferUtils.mm  OBSDALDevice.h  OBSDALDevice.mm  OBSDALMachClient.h  OBSDALMachClient.mm  OBSDALObjectStore.h  OBSDALObjectStore.mm  OBSDALPlugIn.h  OBSDALPlugIn.mm  OBSDALPlugInInterface.h  OBSDALPlugInInterface.mm  OBSDALPlugInMain.mm  OBSDALStream.h  OBSDALStream.mm  OBSDALTestCard.h  OBSDALTestCard.mm  ObjectStore.h  ObjectStore.mm  PlugIn.h  PlugIn.mm  PlugInInterface.h  PlugInInterface.mm  PlugInMain.mm  Stream.h  Stream.mm  TestCard.mm
src/obs-plugin/: CMIODPASampleServer.cpp  CMakeLists.txt  Defines.h.in  MachServer.h  MachServer.mm  plugin-main.cpp  plugin-main.mm
(+18 files in other folders)
